compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/backingField/redundantExplicitBackingField.kt
val it: Int
    <!REDUNDANT_EXPLICIT_BACKING_FIELD!>field<!> = 42
